# kokoro-cuda

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  download_model.py  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: docker.yml
benchmark/: Dockerfile  README.md  benchmark.py  docker-compose.yml
benchmark/output/NVIDIAGeForceRTX5090/: report.md
