[project]
name = "kokoro-cuda"
version = "0.1.0"
description = "Simplified Kokoro TTS with CUDA support"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "numpy>=1.26.0",
    "soundfile==0.13.0",
    "pydub>=0.25.1",
    "kokoro==0.9.4",
    "misaki[en]==0.9.4",
    "phonemizer-fork>=3.3.2",
    "espeakng-loader==0.2.4",
    "spacy==3.8.5",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[project.optional-dependencies]
gpu = ["torch==2.9.1+cu130"]

[tool.uv.sources]
torch = [{ index = "pytorch-cuda", extra = "gpu" }]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
